@@ -61,7 +61,8 @@ Docker容器的哲学是一个Docker容器只运行一个进程。
     ```text
     # Install dumb-init
     RUN wget -O /usr/bin/dumb-init https://github.com/Yelp/dumb-init/releases/download/v1.2.5/dumb-init_1.2.5_x86_64
-    RUN chmod +x /usr/bin/dumb-init
+    RUN chmod +x /usr/bin/dumb-init; \
+        chmod +x /my/script;
     
     # Runs "/usr/bin/dumb-init -- /my/script --with --args"
     ENTRYPOINT ["/usr/bin/dumb-init", "--"]
@@ -75,11 +76,27 @@ Docker容器的哲学是一个Docker容器只运行一个进程。
     * /my/script
         ```bash
         #!/usr/bin/dumb-init /bin/sh
-        # launch a process in the background
-        my-web-server &
-        my-web-server2 &
-        # launch another process in the foreground
-        my-other-server
+
+        ## launch a process in the background
+        # start MySQL
+        /usr/sbin/mysqld --user=mysql -D
+        # start url-forwarder
+        LOG_PATH=/data/logs/url-forwarder;
+        /usr/bin/bash -c "if [ ! -d ${LOG_PATH} ]; then mkdir -p ${LOG_PATH}; fi; /bin/sleep 2";
+        /usr/local/java/jdk/bin/java \
+          -server -Xms2g -Xmx2g -XX:+UseG1GC -verbose:gc \
+          -XX:+HeapDumpOnOutOfMemoryError \
+          -Duser.timezone=GMT+8 \
+          -Xlog:gc*=info:file=/data/logs/url-forwarder/url-forwarder-gc.log::filesize=50M,filecount=4 \
+          -XX:HeapDumpPath=/data/logs/url-forwarder \
+          -jar /data/software/url-forwarder/url-forwarder-0.0.1-SNAPSHOT.jar \
+          --spring.config.additional-location=/data/software/url-forwarder/application.yml &
+        # start named (bind)
+        /usr/local/bind/sbin/named -n 1 -u named -c /usr/local/bind/etc/named.conf
+
+        ## At the end, launch another process in the foreground
+        # start BindUI
+        /usr/local/python3.11.3/bin/python3 /data/webroot/BindUI/manage.py runserver 0.0.0.0:8000
         ```
 
 ### tini
